deployment/k8-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: #{k8sNamespace}#
  labels:
    name: #{k8sNamespace}#
