deployment/k8-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wfc-referential-api-deployment
  namespace: #{k8sNamespace}#
  labels:
    app: wfc-referential-api
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wfc-referential-api
      version: v1
  template:
    metadata:
      labels:
        app: wfc-referential-api
        version: v1
    spec:
      imagePullSecrets:
      - name: harbor-image-pull-secret
      containers:
      - name: wfc-referential-api
        image: registry.wafacash.com/#{imageRepository}#:#{tag}#
        ports:
        - containerPort: 8080
          name: https
          protocol: TCP
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
        - name: tls-certs
          mountPath: /app/certs
          readOnly: true
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: false
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: wfc-referential-api-disk-pvc
        - name: tls-certs
          secret:
            secretName: tls-secret-phoenix-ca-root
        - name: env-config
          configMap:
            name: dotnet-app-env-config
        - name: config-volume
          configMap:
            name: wfc-referential-api-config
            items:
            - key: appsettings.json
              path: appsettings.json 
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      #This rule helps spread them out across nodes when possible
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - wfc-referential-api
              topologyKey: kubernetes.io/hostname
